# sqlstr

./: Cargo.toml  README.md  docker-compose.yaml
examples/: small-binary.rs  sqlx.rs
script/: build-small-binary.sh
src/: command.rs  docs.md  error.rs  expr.rs  format_num.rs  lib.rs  macros.rs  select.rs  select_test.rs  test.rs
src/ast/: cast.rs  column.rs  condition.rs  group.rs  group_by.rs  join.rs  limit.rs  locking.rs  mod.rs  order_by.rs  select.rs  separator.rs  table.rs  value.rs
src/expr/: cast.rs  column.rs  condition.rs  condition_macros.rs  delete.rs  expression.rs  filter.rs  group.rs  group_by.rs  insert.rs  join.rs  limit.rs  locking.rs  order_by.rs  returning.rs  select.rs  separator.rs  table.rs  update.rs  value.rs
src/expr/condition/: math.rs
src/expr/expression/: comparison.rs
src/select/: columns.rs  from.rs  join.rs  macros.rs  mod.rs  test.rs  values.rs
src/util/: macros.rs  mod.rs
