[package]
name = "sqlstr"
description = "Sql string builder"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["Caio Oliveira <caio.vsoliveira23@gmail.com>"]

[lib]
name = "sqlstr"
path = "src/lib.rs"

[features]
std = ["fmt"]
fmt = []

[profile.release]
# Small crate, better code size with 1 codegen
codegen-units = 1

[[example]]
name = "sqlx"
test = true

[[example]]
name = "small-binary"
test = true

[dev-dependencies]
libc = { version = "0.2.151", default-features = false }
sqlx = { version = "0.7.3", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.34.0", default-features = false, features = ["rt", "net"] }
